--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
           <h2 class="visually-hidden">features</h2>
           <ul class="features-list">
             <li class="features list">
+              <div class="features-icon">
+                <svg class="icon-antenna">
+                  <use
+                    href="./images/symbol-defs.svg#icon-antenna"
+                    height="49px"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Strategy</h3>
               <p class="features-item">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +86,14 @@
               </p>
             </li>
             <li class="features list">
+              <div class="features-icon">
+                <svg class="icon-antenna">
+                  <use
+                    href="./images/symbol-defs.svg#icon-clock"
+                    height="49px"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Punctuality</h3>
               <p class="features-item">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +101,14 @@
               </p>
             </li>
             <li class="features list">
+              <div class="features-icon">
+                <svg class="icon-antenna">
+                  <use
+                    href="./images/symbol-defs.svg#icon-diagram"
+                    height="49px"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Diligence</h3>
               <p class="features-item">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +116,15 @@
               </p>
             </li>
             <li class="features list list">
+              <div class="features-icon">
+                <svg class="icon-antenna">
+                  <use
+                    class="antenna"
+                    href="./images/symbol-defs.svg#icon-astronaut"
+                    height="49px"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Technologies</h3>
               <p class="features-item">
                 Design practice focused on digital experiences. We bring forth a
@@ -154,6 +187,44 @@
                 <div class="team-icon">
                   <h3 class="team-title">Mark Guerrero</h3>
                   <p class="team-item">Product Designer</p>
+                  <ul class="team-soc-list list">
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-twitter"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </a>
             </li>
@@ -169,6 +240,44 @@
                 <div class="team-icon">
                   <h3 class="team-title">Tom Ford</h3>
                   <p class="team-item">Frontend Developer</p>
+                  <ul class="team-soc-list list">
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-twitter"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </a>
             </li>
@@ -184,6 +293,44 @@
                 <div class="team-icon">
                   <h3 class="team-title">Camila Garcia</h3>
                   <p class="team-item">Marketing</p>
+                  <ul class="team-soc-list list">
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-twitter"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </a>
             </li>
@@ -199,7 +346,95 @@
                 <div class="team-icon">
                   <h3 class="team-title">Daniel Wilson</h3>
                   <p class="team-item">UI Designer</p>
+                  <ul class="team-soc-list list">
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-instagram"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-twitter"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-facebook"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="team-soc-item">
+                      <a class="team-soc-link link" href>
+                        <svg class="team-soc-icon" width="16" height="16">
+                          <use
+                            href="./images/symbol-defs-soc.svg#icon-linkedin"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Customers -->
+      <section class="section">
+        <div class="container">
+          <h2 class="customers">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <a class="customers-soc-link" href="">
+                <svg class="customers-soc-icon" width="41">
+                  <use href="./images/customers .svg#icon-ya"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-soc-link" href="">
+                <svg class="customers-soc-icon" width="40">
+                  <use href="./images/customers .svg#icon-here"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-soc-link" href="">
+                <svg class="customers-soc-icon" width="44">
+                  <use href="./images/customers .svg#icon-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-soc-link" href="">
+                <svg class="customers-soc-icon" width="84">
+                  <use href="./images/customers .svg#icon-foster"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-soc-link" href="">
+                <svg class="customers-soc-icon" width="63">
+                  <use href="./images/customers .svg#icon-brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a class="customers-soc-link" href="">
+                <svg class="customers-soc-icon" width="94" height="44">
+                  <use href="./images/customers .svg#icon-tag"></use>
+                </svg>
               </a>
             </li>
           </ul>
@@ -216,6 +451,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="container">
+        <ul class="footer-soc-list list">
+          <h2 class="footer-title">Social media</h2>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link link" href>
+              <svg class="footer-soc-icon" width="24" height="24">
+                <use href="./images/symbol-defs-soc.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link link" href>
+              <svg class="footer-soc-icon" width="24" height="24">
+                <use href="./images/symbol-defs-soc.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link link" href>
+              <svg class="footer-soc-icon" width="24" height="24">
+                <use href="./images/symbol-defs-soc.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-soc-item">
+            <a class="footer-soc-link link" href>
+              <svg class="footer-soc-icon" width="24" height="24">
+                <use href="./images/symbol-defs-soc.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
