--- a/index.html
+++ b/index.html
@@ -397,42 +397,42 @@
           <ul class="customers-list list">
             <li class="customers-item">
               <a class="customers-soc-link" href="">
-                <svg class="customers-soc-icon" width="41">
+                <svg class="customers-soc-icon" width="104" height="56">
                   <use href="./images/customers .svg#icon-ya"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-soc-link" href="">
-                <svg class="customers-soc-icon" width="40">
+                <svg class="customers-soc-icon" width="104" height="56">
                   <use href="./images/customers .svg#icon-here"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-soc-link" href="">
-                <svg class="customers-soc-icon" width="44">
+                <svg class="customers-soc-icon" width="104" height="56">
                   <use href="./images/customers .svg#icon-company"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-soc-link" href="">
-                <svg class="customers-soc-icon" width="84">
+                <svg class="customers-soc-icon" width="104" height="56">
                   <use href="./images/customers .svg#icon-foster"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-soc-link" href="">
-                <svg class="customers-soc-icon" width="63">
+                <svg class="customers-soc-icon" width="104" height="56">
                   <use href="./images/customers .svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-soc-link" href="">
-                <svg class="customers-soc-icon" width="94" height="44">
+                <svg class="customers-soc-icon" width="104" height="56">
                   <use href="./images/customers .svg#icon-tag"></use>
                 </svg>
               </a>
@@ -442,48 +442,51 @@
       </section>
     </main>
     <!--footer -->
-    <footer class="footer">
-      <div class="container footer-bottom">
-        <a class="footer-logo link" href="./index.html"
-          >Web<span class="footer-logo-studio link">Studio</span></a
-        >
-        <p class="footer-items">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="container">
-        <ul class="footer-soc-list list">
-          <h2 class="footer-title">Social media</h2>
-          <li class="footer-soc-item">
-            <a class="footer-soc-link link" href>
-              <svg class="footer-soc-icon" width="24" height="24">
-                <use href="./images/symbol-defs-soc.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-soc-item">
-            <a class="footer-soc-link link" href>
-              <svg class="footer-soc-icon" width="24" height="24">
-                <use href="./images/symbol-defs-soc.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-soc-item">
-            <a class="footer-soc-link link" href>
-              <svg class="footer-soc-icon" width="24" height="24">
-                <use href="./images/symbol-defs-soc.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-soc-item">
-            <a class="footer-soc-link link" href>
-              <svg class="footer-soc-icon" width="24" height="24">
-                <use href="./images/symbol-defs-soc.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+    <footer class="footer footer-cont">
+      <div class="container footer-soc-cont">
+        <div class="footer-bottom">
+          <a class="footer-logo link" href="./index.html"
+            >Web<span class="footer-logo-studio link">Studio</span></a
+          >
+          <p class="footer-items">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-soc">
+          <p class="footer-title">Social media</p>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href>
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-soc.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href>
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-soc.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href>
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-soc.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href>
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-soc.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
