--- a/portfolio.html
+++ b/portfolio.html
@@ -221,15 +221,51 @@
       </section>
     </main>
     <!-- footer -->
-    <footer class="footer link">
-      <div class="container footer-bottom">
-        <a class="footer-logo link" href="./index.html"
-          >Web<span class="footer-logo-studio link">Studio</span></a
-        >
-        <p class="footer-item">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+    <footer class="footer footer-cont">
+      <div class="container footer-soc-cont">
+        <div class="footer-bottom">
+          <a class="footer-logo link" href="./index.html"
+            >Web<span class="footer-logo-studio link">Studio</span></a
+          >
+          <p class="footer-items">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-soc">
+          <p class="footer-title">Social media</p>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href>
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-soc.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href>
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-soc.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href>
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-soc.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href>
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-soc.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
