--- a/index.html
+++ b/index.html
@@ -73,10 +73,7 @@
             <li class="features list">
               <div class="features-icon">
                 <svg class="icon-antenna">
-                  <use
-                    href="./images/symbol-defs.svg#icon-antenna"
-                    height="49px"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Strategy</h3>
@@ -88,10 +85,7 @@
             <li class="features list">
               <div class="features-icon">
                 <svg class="icon-antenna">
-                  <use
-                    href="./images/symbol-defs.svg#icon-clock"
-                    height="49px"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Punctuality</h3>
@@ -103,10 +97,7 @@
             <li class="features list">
               <div class="features-icon">
                 <svg class="icon-antenna">
-                  <use
-                    href="./images/symbol-defs.svg#icon-diagram"
-                    height="49px"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Diligence</h3>
@@ -121,7 +112,6 @@
                   <use
                     class="antenna"
                     href="./images/symbol-defs.svg#icon-astronaut"
-                    height="49px"
                   ></use>
                 </svg>
               </div>
@@ -176,216 +166,208 @@
           <h2 class="team">Our Team</h2>
           <ul class="team-list list">
             <li class="team-text list">
-              <a class="team-img" href="">
-                <img
-                  class="team-photo"
-                  src="./images/Mark-Guerrero.jpg"
-                  alt="Mark Guerrero"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-icon">
-                  <h3 class="team-title">Mark Guerrero</h3>
-                  <p class="team-item">Product Designer</p>
-                  <ul class="team-soc-list list">
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-instagram"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-twitter"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-facebook"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-linkedin"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </a>
+              <img
+                class="team-photo"
+                src="./images/Mark-Guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="team-icon">
+                <h3 class="team-title">Mark Guerrero</h3>
+                <p class="team-item">Product Designer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-text list">
-              <a class="team-img" href="">
-                <img
-                  class="team-photo"
-                  src="./images/Tom-Ford.jpg"
-                  alt="Tom Ford"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-icon">
-                  <h3 class="team-title">Tom Ford</h3>
-                  <p class="team-item">Frontend Developer</p>
-                  <ul class="team-soc-list list">
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-instagram"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-twitter"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-facebook"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-linkedin"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </a>
+              <img
+                class="team-photo"
+                src="./images/Tom-Ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="team-icon">
+                <h3 class="team-title">Tom Ford</h3>
+                <p class="team-item">Frontend Developer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-text list">
-              <a class="team-img" href="">
-                <img
-                  class="team-photo"
-                  src="./images/Camila-Garcia.jpg"
-                  alt="Camila Garcia"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-icon">
-                  <h3 class="team-title">Camila Garcia</h3>
-                  <p class="team-item">Marketing</p>
-                  <ul class="team-soc-list list">
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-instagram"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-twitter"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-facebook"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-linkedin"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </a>
+              <img
+                class="team-photo"
+                src="./images/Camila-Garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="team-icon">
+                <h3 class="team-title">Camila Garcia</h3>
+                <p class="team-item">Marketing</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="team-text list">
-              <a class="team-img" href="">
-                <img
-                  class="team-photo"
-                  src="./images/Daniel-Wilson.jpg"
-                  alt="Daniel Wilson"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-icon">
-                  <h3 class="team-title">Daniel Wilson</h3>
-                  <p class="team-item">UI Designer</p>
-                  <ul class="team-soc-list list">
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-instagram"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-twitter"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-facebook"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="team-soc-item">
-                      <a class="team-soc-link link" href>
-                        <svg class="team-soc-icon" width="16" height="16">
-                          <use
-                            href="./images/symbol-defs-soc.svg#icon-linkedin"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </a>
+              <img
+                class="team-photo"
+                src="./images/Daniel-Wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="team-icon">
+                <h3 class="team-title">Daniel Wilson</h3>
+                <p class="team-item">UI Designer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-item">
+                    <a class="team-soc-link link" href>
+                      <svg class="team-soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-soc.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
